<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Subastas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="sign_up">Registrarse</string>
    <string name="adress">Dirección</string>
    <string name="create_user">Confirmar</string>
    <string name="login">OK</string>
    <string name="incoming">Proximas</string>
    <string name="current">Activas</string>
    <string name="finished">Terminadas</string>

</resources>